add_executable(wfn_adapter WfnAdapter.cpp WfnAdapter.h)

#if (WITH_OCC)
#    find_package(occ REQUIRED)
#endif ()
message(WARNING ${occ_INCLUDE_DIRS})
message(WARNING ${occ_LIBRARIES})
include(CMakePrintHelpers)
include(${CMAKE_SOURCE_DIR}/cmake/get_all_properties.cmake)
target_link_libraries(wfn_adapter PUBLIC occ::qm libnosphera2)
